--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 						<div style="font-size: 30px; text-align: center"><font color="white">Yi Song (宋壹)</font></div>
 						<p> </p>
 						<p>PhD Candidate</p>
-						<p class="yyellow">School of Computer Science <br>Wuhan University, China</p>
+						<p class="yyellow">Lab. C309 <br>School of Computer Science <br>Wuhan University, China</p>
 						<p><abbr title="E-mail"><a href="mailto:yisong@whu.edu.cn">yisong@whu.edu.cn</a></abbr></p>
 					</div>
 					<div class="person-bike">
 						
-						<div class="bike bikeAni" data-container="body" data-toggle="popover" data-placement="top" data-content="2021, keep moving!"></div>
+						<div class="bike bikeAni" data-container="body" data-toggle="popover" data-placement="top" data-content="2022, keep moving!"></div>
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">August 18, 2022</span>.</p>
+						<p>Updated on <span class="footer">August 22, 2022</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -101,7 +101,7 @@
 					<h6><img src="img/award.svg" class="section-icon">Awards</h4>
 					<ul class="paper">
 						<li>
-							<span class="award-tag">[2021] Outstanding graduate student</span> (Wuhan University).
+							<span class="award-tag">[2021] Outstanding Graduate Student</span> (Wuhan University).
 						</li>
 						
 						<li>
