--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">August 22, 2022</span>.</p>
+						<p>Updated on <span class="footer">September 3, 2022</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -69,7 +69,7 @@
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Quanming Liu, Xihao Zhang and Xi Wu. 
 							<strong><em>A Comprehensive Empirical Investigation on Failure Clustering in Parallel Debugging.</em></strong> 
-							Journal of Systems and Software (JSS), 2022, 193 <font color = "blue">[CCF-B, JCR-2]</font> <a href="paper/JSS2022.pdf">[PDF]</a> <span class="badge badge-danger">New</span>
+							Journal of Systems and Software (JSS), 2022, 193 <font color = "blue">[CCF-B, JCR-2]</font> <a href="paper/JSS2022.pdf">[PDF]</a> <a href="https://doi.org/10.1016/j.jss.2022.111452">[HTML]</a> <span class="badge badge-danger">New</span>
 						</li>
 					</ul>
 					<p class="subtitle">2. Software Testing</p>
@@ -78,7 +78,7 @@
 						<li class="">
 							Zhao Li, Yuhang Chen, <u>Yi Song</u>, Kangjie Lu and Jinwei Shen. 
 							<strong><em>Effective Covering Array Generation Using an Improved Particle Swarm Optimization.</em></strong> 
-							IEEE Transactions on Reliability (TR), 2022, 71(1): 284-294 <font color = "blue">[JCR-1]</font> <a href="paper/TR2022.pdf">[PDF]</a>			
+							IEEE Transactions on Reliability (TR), 2022, 71(1): 284-294 <font color = "blue">[JCR-1]</font> <a href="paper/TR2022.pdf">[PDF]</a> <a href="https://ieeexplore.ieee.org/abstract/document/9653675">[HTML]</a>			
 						</li>
 					</ul>
 				</div>
