--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">September 3, 2022</span>.</p>
+						<p>Updated on <span class="footer">September 5, 2022</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -79,6 +79,16 @@
 							Zhao Li, Yuhang Chen, <u>Yi Song</u>, Kangjie Lu and Jinwei Shen. 
 							<strong><em>Effective Covering Array Generation Using an Improved Particle Swarm Optimization.</em></strong> 
 							IEEE Transactions on Reliability (TR), 2022, 71(1): 284-294 <font color = "blue">[JCR-1]</font> <a href="paper/TR2022.pdf">[PDF]</a> <a href="https://ieeexplore.ieee.org/abstract/document/9653675">[HTML]</a>			
+						</li>
+					</ul>
+				</div>
+				
+			    	<!--news-->
+				<div class="news-sect">
+					<h6><img src="img/news.svg" class="section-icon">News</h4>
+					<ul class="paper">
+						<li>
+                            				<strong>September 3, 2022:</strong> Our research paper <em>Evolving Ranking-Based Failure Proximities for Better Clustering in Fault Isolation</em> was awarded <strong>an Available and a Reusable badges</strong> by the Artifact Evaluation track of ASE 2022.
 						</li>
 					</ul>
 				</div>
