--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">January 1, 2023</span>.</p>
+						<p>Updated on <span class="footer">January 14, 2023</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -63,13 +63,13 @@
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Quanming Liu and Ruizhi Gao. 
 							<strong><em>Evolving Ranking-Based Failure Proximities for Better Clustering in Fault Isolation.</em></strong> 
-							2022 37th IEEE/ACM International Conference on Automated Software Engineering (ASE) [Accepted] <font color = "blue">[CCF-A]</font> <span class="badge badge-danger">New</span>
+							2022 37th IEEE/ACM International Conference on Automated Software Engineering (ASE’22) <font color = "blue">[CCF-A]</font> <a href="paper/ASE2022.pdf">[PDF]</a> <a href="https://dl.acm.org/doi/10.1145/3551349.3556922">[HTML]</a> <!--<span class="badge badge-danger">New</span>-->
 							
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Quanming Liu, Xihao Zhang and Xi Wu. 
 							<strong><em>A Comprehensive Empirical Investigation on Failure Clustering in Parallel Debugging.</em></strong> 
-							Journal of Systems and Software (JSS), 2022, 193 <font color = "blue">[CCF-B, JCR-2]</font> <a href="paper/JSS2022.pdf">[PDF]</a> <a href="https://doi.org/10.1016/j.jss.2022.111452">[HTML]</a> <span class="badge badge-danger">New</span>
+							Journal of Systems and Software (JSS), 2022, 193: 111452 <font color = "blue">[CCF-B, JCR-2]</font> <a href="paper/JSS2022.pdf">[PDF]</a> <a href="https://doi.org/10.1016/j.jss.2022.111452">[HTML]</a> <!--<span class="badge badge-danger">New</span>-->
 						</li>
 					</ul>
 					<p class="subtitle">2. Software Testing</p>
@@ -110,6 +110,15 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.svg" class="section-icon">Awards</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2022] Graduate Student International Exchange Scholarship</span> (Wuhan University).
+						</li>
+					        <li>
+							<span class="award-tag">[2022] Outstanding Graduate Student</span> (Wuhan University).
+						</li>
+						<li>
+							<span class="award-tag">[2022] Academic Scholarship</span> (Wuhan University).
+						</li>
 						<li>
 							<span class="award-tag">[2021] Outstanding Graduate Student</span> (Wuhan University).
 						</li>
