--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">January 14, 2023</span>.</p>
+						<p>Updated on <span class="footer">May 17, 2023</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -57,28 +57,32 @@
 				<!--projects-->
 				<div class="projects-sect">
 					<h6><img src="img/list.svg" class="section-icon">Refereed Publications</h6>
-					<p class="subtitle">1. Software Debugging</p>
+					<p class="subtitle">Refereed Journals</p>
 					<p></p>
 					<ul class="paper">
-						<li class="">
-							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Quanming Liu and Ruizhi Gao. 
-							<strong><em>Evolving Ranking-Based Failure Proximities for Better Clustering in Fault Isolation.</em></strong> 
-							2022 37th IEEE/ACM International Conference on Automated Software Engineering (ASE’22) <font color = "blue">[CCF-A]</font> <a href="paper/ASE2022.pdf">[PDF]</a> <a href="https://dl.acm.org/doi/10.1145/3551349.3556922">[HTML]</a> <!--<span class="badge badge-danger">New</span>-->
-							
+					    <li class="">
+							<u>Yi Song</u>, Xiaoyuan Xie and Baowen Xu. 
+							<strong><em>When Debugging Encounters Artificial Intelligence: State of the Art and Open Challenges.</em></strong> 
+							SCIENCE CHINA Information Sciences (SCIS) <font color = "blue">[CCF-A, JCR-1]</font> <font color = "crimson">[Just Accept]</font> <span class="badge badge-danger">New</span>
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Quanming Liu, Xihao Zhang and Xi Wu. 
 							<strong><em>A Comprehensive Empirical Investigation on Failure Clustering in Parallel Debugging.</em></strong> 
 							Journal of Systems and Software (JSS), 2022, 193: 111452 <font color = "blue">[CCF-B, JCR-2]</font> <a href="paper/JSS2022.pdf">[PDF]</a> <a href="https://doi.org/10.1016/j.jss.2022.111452">[HTML]</a> <!--<span class="badge badge-danger">New</span>-->
 						</li>
-					</ul>
-					<p class="subtitle">2. Software Testing</p>
-					<p></p>
-					<ul class="paper">
 						<li class="">
 							Zhao Li, Yuhang Chen, <u>Yi Song</u>, Kangjie Lu and Jinwei Shen. 
 							<strong><em>Effective Covering Array Generation Using an Improved Particle Swarm Optimization.</em></strong> 
 							IEEE Transactions on Reliability (TR), 2022, 71(1): 284-294 <font color = "blue">[JCR-1]</font> <a href="paper/TR2022.pdf">[PDF]</a> <a href="https://ieeexplore.ieee.org/abstract/document/9653675">[HTML]</a>			
+						</li>
+					</ul>
+					<p class="subtitle">Refereed Conferences</p>
+					<p></p>
+					<ul class="paper">
+						<li class="">
+							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Quanming Liu and Ruizhi Gao. 
+							<strong><em>Evolving Ranking-Based Failure Proximities for Better Clustering in Fault Isolation.</em></strong> 
+							2022 37th IEEE/ACM International Conference on Automated Software Engineering (ASE’22) <font color = "blue">[CCF-A]</font> <a href="paper/ASE2022.pdf">[PDF]</a> <a href="https://dl.acm.org/doi/10.1145/3551349.3556922">[HTML]</a> <!--<span class="badge badge-danger">New</span>-->
 						</li>
 					</ul>
 				</div>
