--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">May 17, 2023</span>.</p>
+						<p>Updated on <span class="footer">July 1, 2023</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -114,6 +114,9 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.svg" class="section-icon">Awards</h4>
 					<ul class="paper">
+					        <li>
+							<span class="award-tag">[2023] The First-class Award of the Doctoral Students Academic Forum</span> (School of Computer Science, Wuhan University).
+						</li>
 						<li>
 							<span class="award-tag">[2022] Graduate Student International Exchange Scholarship</span> (Wuhan University).
 						</li>
