--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					    <li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie and Baowen Xu. 
 							<strong><em>When Debugging Encounters Artificial Intelligence: State of the Art and Open Challenges.</em></strong> 
-							SCIENCE CHINA Information Sciences (SCIS) <font color = "blue">[CCF-A, JCR-1]</font> <font color = "crimson">[Just Accept]</font> <span class="badge badge-danger">New</span>
+							SCIENCE CHINA Information Sciences (SCIS) <font color = "blue">[CCF-A, JCR-1]</font> <a href="paper/SCIS2023.pdf">[PDF]</a> <a href="https://www.sciengine.com/SCIS/doi/10.1007/s11432-022-3803-9">[HTML]</a>
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Quanming Liu, Xihao Zhang and Xi Wu. 
