--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="col-sm-3 sidebar">
 				<div class="sidebar-content">
 					<div class="person-image">
-						<img src="img/song.png"></img>
+						<img src="img/YiSong.png"></img>
 					</div>
 					<div class="person-info">
 						<div style="font-size: 30px; text-align: center"><font color="white">Yi Song (宋壹)</font></div>
