--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">August 1, 2023</span>.</p>
+						<p>Updated on <span class="footer">October 10, 2023</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -79,6 +79,11 @@
 					<p class="subtitle">Refereed Conferences</p>
 					<p></p>
 					<ul class="paper">
+						<li class="">
+							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Quanming Liu, Ruizhi Gao and Chenliang Xing. 
+							<strong><em>ReClues: Representing and indexing failures in parallel debugging with program variables.</em></strong> 
+							2024 46th International Conference on Software Engineering (ICSE’24) <font color = "blue">[CCF-A]</font> <font color = "crimson">[Just Accept]</font> <span class="badge badge-danger">New</span>
+						</li>
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Quanming Liu and Ruizhi Gao. 
 							<strong><em>Evolving Ranking-Based Failure Proximities for Better Clustering in Fault Isolation.</em></strong> 
