--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">October 10, 2023</span>.</p>
+						<p>Updated on <span class="footer">November 21, 2023</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -56,7 +56,7 @@
 				</div>
 				<!--projects-->
 				<div class="projects-sect">
-					<h6><img src="img/list.svg" class="section-icon">Refereed Publications</h6>
+					<h6><img src="img/list.svg" class="section-icon">Publications</h6>
 					<p class="subtitle">Refereed Journals</p>
 					<p></p>
 					<ul class="paper">
@@ -90,6 +90,15 @@
 							2022 37th IEEE/ACM International Conference on Automated Software Engineering (ASE’22) <font color = "blue">[CCF-A]</font> <a href="paper/ASE2022.pdf">[PDF]</a> <a href="https://dl.acm.org/doi/10.1145/3551349.3556922">[HTML]</a> <!--<span class="badge badge-danger">New</span>-->
 						</li>
 					</ul>
+					<p class="subtitle">Preprints</p>
+					<p></p>
+					<ul class="paper">
+					    <li class="">
+							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Songqiang Chen, Quanming Liu and Ruizhi Gao. 
+							<strong><em>SURE: A Visualized Failure Indexing Approach using Program Memory Spectrum.</em></strong> 
+							ArXiv, 2023 <a href="paper/SURE_ArXiv.pdf">[PDF]</a> <a href="https://arxiv.org/abs/2310.12415">[HTML]</a>
+						</li>
+					</ul>
 				</div>
 				
 			    	<!--news-->
@@ -119,7 +128,10 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.svg" class="section-icon">Awards</h4>
 					<ul class="paper">
-					        <li>
+						<li>
+							<span class="award-tag">[2023] Tencent Scholarship</span> (School of Computer Science, Wuhan University).
+						</li>
+					    <li>
 							<span class="award-tag">[2023] The First-class Award of the Doctoral Students Academic Forum</span> (School of Computer Science, Wuhan University).
 						</li>
 						<li>
