--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!--Author, keywords, and description-->
 	<meta name="author" content="Yi Song">
-	<meta name="keywords" content="Yi Song, School of Computer Science, Wunhan University, 宋壹, 武汉大学, 计算机学院">
+	<meta name="keywords" content="Yi Song, School of Computer Science, Wuhan University, 宋壹, 武汉大学, 计算机学院">
 	<meta name="description" content="Yi Song is currently a PhD candidate in School of Computer Science, Wuhan University, China. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering.">
     <!--Page icon-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -34,11 +34,11 @@
 					</div>
 					<div class="person-bike">
 						
-						<div class="bike bikeAni" data-container="body" data-toggle="popover" data-placement="top" data-content="2023, keep moving!"></div>
+						<div class="bike bikeAni" data-container="body" data-toggle="popover" data-placement="top" data-content="2024, keep moving!"></div>
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">November 21, 2023</span>.</p>
+						<p>Updated on <span class="footer">January 28, 2024</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -82,7 +82,7 @@
 						<li class="">
 							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Quanming Liu, Ruizhi Gao and Chenliang Xing. 
 							<strong><em>ReClues: Representing and indexing failures in parallel debugging with program variables.</em></strong> 
-							2024 46th International Conference on Software Engineering (ICSE’24) <font color = "blue">[CCF-A]</font> <font color = "crimson">[Just Accept]</font> <span class="badge badge-danger">New</span>
+							2024 46th International Conference on Software Engineering (ICSE’24) <font color = "blue">[CCF-A]</font>
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Quanming Liu and Ruizhi Gao. 
@@ -106,6 +106,9 @@
 					<h6><img src="img/news.svg" class="section-icon">News</h4>
 					<ul class="paper">
 						<li>
+                            				<strong>January 28, 2024:</strong> Our research paper <em>ReClues: Representing and indexing failures in parallel debugging with program variables</em> was awarded <strong>an Available and a Reusable badges</strong> by the Artifact Evaluation track of ICSE 2024.
+						</li>
+						<li>
                             				<strong>September 3, 2022:</strong> Our research paper <em>Evolving Ranking-Based Failure Proximities for Better Clustering in Fault Isolation</em> was awarded <strong>an Available and a Reusable badges</strong> by the Artifact Evaluation track of ASE 2022.
 						</li>
 					</ul>
@@ -128,6 +131,9 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.svg" class="section-icon">Awards</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2023] Outstanding Graduate Student</span> (Wuhan University).
+						</li>
 						<li>
 							<span class="award-tag">[2023] Tencent Scholarship</span> (School of Computer Science, Wuhan University).
 						</li>
