--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">January 28, 2024</span>.</p>
+						<p>Updated on <span class="footer">February 21, 2024</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -63,7 +63,7 @@
 					    <li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie and Baowen Xu. 
 							<strong><em>When Debugging Encounters Artificial Intelligence: State of the Art and Open Challenges.</em></strong> 
-							SCIENCE CHINA Information Sciences (SCIS) <font color = "blue">[CCF-A, JCR-1]</font> <a href="paper/SCIS2023.pdf">[PDF]</a> <a href="https://www.sciengine.com/SCIS/doi/10.1007/s11432-022-3803-9">[HTML]</a>
+							SCIENCE CHINA Information Sciences (SCIS), 2024, 67(4): 141101 <font color = "blue">[CCF-A, JCR-1]</font> <a href="paper/SCIS2024.pdf">[PDF]</a> <a href="https://www.sciengine.com/SCIS/doi/10.1007/s11432-022-3803-9">[HTML]</a>
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Quanming Liu, Xihao Zhang and Xi Wu. 
