--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">March 12, 2024</span>.</p>
+						<p>Updated on <span class="footer">May 6, 2024</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -82,7 +82,7 @@
 						<li class="">
 							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Quanming Liu, Ruizhi Gao and Chenliang Xing. 
 							<strong><em>ReClues: Representing and indexing failures in parallel debugging with program variables.</em></strong> 
-							2024 46th International Conference on Software Engineering (ICSE’24) <font color = "blue">[CCF-A]</font> <a href="paper/ICSE2024.pdf">[PDF]</a> <a href="https://www.computer.org/csdl/proceedings-article/icse/2024/021700a895/1V5BkB09XqM">[HTML]</a>
+							2024 46th International Conference on Software Engineering (ICSE’24) <font color = "blue">[CCF-A]</font> <a href="paper/ICSE2024.pdf">[PDF]</a> <a href="https://www.computer.org/csdl/proceedings-article/icse/2024/021700b359/1WDJbqLoSJi">[HTML]</a>
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Quanming Liu and Ruizhi Gao. 
@@ -131,6 +131,12 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.svg" class="section-icon">Awards</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2024] Outstanding PhD Graduate</span> (School of Computer Science, Wuhan University).
+						</li>
+						<li>
+							<span class="award-tag">[2024] Social Activity Activist</span> (School of Computer Science, Wuhan University).
+						</li>
 						<li>
 							<span class="award-tag">[2023] Outstanding Graduate Student</span> (Wuhan University).
 						</li>
