--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!--Author, keywords, and description-->
 	<meta name="author" content="Yi Song">
 	<meta name="keywords" content="Yi Song, School of Computer Science, Wuhan University, 宋壹, 武汉大学, 计算机学院">
-	<meta name="description" content="Yi Song is currently a PhD candidate in School of Computer Science, Wuhan University, China. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering.">
+	<meta name="description" content="Yi Song is currently a Postdoc in School of Computer Science, Wuhan University, China. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering.">
     <!--Page icon-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<!--CSS styles-->
@@ -28,8 +28,8 @@
 					<div class="person-info">
 						<div style="font-size: 30px; text-align: center"><font color="white">Yi Song (宋壹)</font></div>
 						<p> </p>
-						<p>PhD Candidate</p>
-						<p class="yyellow">Lab. C309 <br>School of Computer Science <br>Wuhan University, China</p>
+						<p>Postdoc</p>
+						<p class="yyellow">Lab. E205 <br>School of Computer Science <br>Wuhan University, China</p>
 						<p><abbr title="E-mail"><a href="mailto:yisong@whu.edu.cn">yisong@whu.edu.cn</a></abbr></p>
 					</div>
 					<div class="person-bike">
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">May 6, 2024</span>.</p>
+						<p>Updated on <span class="footer">June 30, 2024</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -48,10 +48,10 @@
 				<div class="biography-sect">
 					<h6><img src="img/user.svg" class="section-icon">Biography</h6>
 					<p> 
-						<em>Yi Song</em> is currently a PhD candidate in School of Computer Science, Wuhan University, China, under the supervision of professor <a href="http://xiaoyuanxie.github.io" target="_blank">Xiaoyuan Xie</a>. He is also a member of <a href="http://cstar.whu.edu.cn/en/index.html" target="_blank">CSTAR</a> - Centre of Software Testing, Analysis, and Reliability (2020 ~ ). His research interests mainly include software testing, debugging, program analysis, and search-based software engineering. Any cooperation is warmly welcomed, and more information can be found at <a href="https://github.com/yisongy" target="_blank">GitHub</a> and <a href="https://scholar.google.com/citations?hl=zh-CN&user=WHxYAi8AAAAJ" target="_blank">Google Scholar</a>.
+						Dr. Yi Song is currently a HongYi Postdoc (弘毅博士后) in School of Computer Science, Wuhan University, China, working with Prof. <a href="http://xiaoyuanxie.github.io" target="_blank">Xiaoyuan Xie</a>. He is also a member of <a href="http://cstar.whu.edu.cn/en/index.html" target="_blank">CSTAR</a> - Centre of Software Testing, Analysis, and Reliability. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering. Any cooperation is warmly welcomed, and more information can be found at <a href="https://github.com/yisongy" target="_blank">GitHub</a> and <a href="https://scholar.google.com/citations?hl=zh-CN&user=WHxYAi8AAAAJ" target="_blank">Google Scholar</a>.
 					</p>
 					<p>	
-						Before that, he received B.Sc. and M.Phil. degrees in Computer Science from China Three Gorges University in 2018 and 2020, respectively, and received his dual bachelor's degree from Communication University of China in 2018. He visited Advanced Research Center on Software Testing and Quality Assurance at The University of Texas at Dallas as a short-term scholar from April to June 2019.
+						He received his Ph.D. degree in Software Engineering from Wuhan University in 2024. He received his B.Sc. and M.Phil. degrees in Computer Science from China Three Gorges University in 2018 and 2020, respectively, and received his dual bachelor's degree from Communication University of China in 2018. He visited Advanced Research Center on Software Testing and Quality Assurance at The University of Texas at Dallas as a short-term scholar from April to June 2019.
 					</p>
 				</div>
 				<!--projects-->
@@ -60,6 +60,12 @@
 					<p class="subtitle">Refereed Journals</p>
 					<p></p>
 					<ul class="paper">
+						<li class="">
+							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Songqiang Chen, Quanming Liu and Ruizhi Gao. 
+							<strong><em>SURE: A Visualized Failure Indexing Approach using Program Memory Spectrum.</em></strong> 
+							Transactions on Software Engineering and Methodology (TOSEM) <font color = "blue">[CCF-A, JCR-1]</font> <font color = "crimson">[Just Accept]</font> <span class="badge badge-danger">New</span> 
+						</li>
+					
 					    <li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie and Baowen Xu. 
 							<strong><em>When Debugging Encounters Artificial Intelligence: State of the Art and Open Challenges.</em></strong> 
@@ -88,15 +94,6 @@
 							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Quanming Liu and Ruizhi Gao. 
 							<strong><em>Evolving Ranking-Based Failure Proximities for Better Clustering in Fault Isolation.</em></strong> 
 							2022 37th IEEE/ACM International Conference on Automated Software Engineering (ASE’22) <font color = "blue">[CCF-A]</font> <a href="paper/ASE2022.pdf">[PDF]</a> <a href="https://dl.acm.org/doi/10.1145/3551349.3556922">[HTML]</a> <!--<span class="badge badge-danger">New</span>-->
-						</li>
-					</ul>
-					<p class="subtitle">Preprints</p>
-					<p></p>
-					<ul class="paper">
-					    <li class="">
-							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Songqiang Chen, Quanming Liu and Ruizhi Gao. 
-							<strong><em>SURE: A Visualized Failure Indexing Approach using Program Memory Spectrum.</em></strong> 
-							ArXiv, 2023 <a href="paper/SURE_ArXiv.pdf">[PDF]</a> <a href="https://arxiv.org/abs/2310.12415">[HTML]</a>
 						</li>
 					</ul>
 				</div>
