--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">July 3, 2024</span>.</p>
+						<p>Updated on <span class="footer">Aug 8, 2024</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -86,9 +86,14 @@
 					<p></p>
 					<ul class="paper">
 						<li class="">
+							Xihao Zhang, <u>Yi Song</u> (co-first author), Xiaoyuan Xie, Qi Xin and Chenliang Xing. 
+							<strong><em>Do not neglect what's on your hands: localizing software faults with exception trigger stream.</em></strong> 
+							2024 39th IEEE/ACM International Conference on Automated Software Engineering (ASE’24) <font color = "blue">[CCF-A]</font> <font color = "crimson">[Just Accept]</font> <span class="badge badge-danger">New</span>
+						</li>
+						<li class="">
 							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Quanming Liu, Ruizhi Gao and Chenliang Xing. 
 							<strong><em>ReClues: Representing and indexing failures in parallel debugging with program variables.</em></strong> 
-							2024 46th International Conference on Software Engineering (ICSE’24) <font color = "blue">[CCF-A]</font> <a href="paper/ICSE2024.pdf">[PDF]</a> <a href="https://www.computer.org/csdl/proceedings-article/icse/2024/021700b359/1WDJbqLoSJi">[HTML]</a>
+							2024 46th IEEE/ACM International Conference on Software Engineering (ICSE’24) <font color = "blue">[CCF-A]</font> <a href="paper/ICSE2024.pdf">[PDF]</a> <a href="https://www.computer.org/csdl/proceedings-article/icse/2024/021700b359/1WDJbqLoSJi">[HTML]</a>
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Quanming Liu and Ruizhi Gao. 
@@ -128,6 +133,9 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.svg" class="section-icon">Awards</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2024] Postdoctoral Fellowship Program</span> (China Postdoctoral Science Foundation)
+						</li>
 						<li>
 							<span class="award-tag">[2024] The First-class Award of the Doctoral Academic Forum</span> (School of Computer Science, Wuhan University & DiDi)
 						</li>
