--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!--Author, keywords, and description-->
 	<meta name="author" content="Yi Song">
 	<meta name="keywords" content="Yi Song, School of Computer Science, Wuhan University, 宋壹, 武汉大学, 计算机学院">
-	<meta name="description" content="Yi Song is currently a Postdoc in School of Computer Science, Wuhan University, China. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering.">
+	<meta name="description" content="Yi Song is currently a Postdoc Research Fellow in School of Computer Science, Wuhan University, China. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering.">
     <!--Page icon-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<!--CSS styles-->
@@ -28,7 +28,7 @@
 					<div class="person-info">
 						<div style="font-size: 30px; text-align: center"><font color="white">Yi Song (宋壹)</font></div>
 						<p> </p>
-						<p>Postdoc</p>
+						<p>Postdoc Research Fellow</p>
 						<p class="yyellow">Lab. E205 <br>School of Computer Science <br>Wuhan University, China</p>
 						<p><abbr title="E-mail"><a href="mailto:yisong@whu.edu.cn">yisong@whu.edu.cn</a></abbr></p>
 					</div>
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Aug 8, 2024</span>.</p>
+						<p>Updated on <span class="footer">Sept 30, 2024</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -48,7 +48,7 @@
 				<div class="biography-sect">
 					<h6><img src="img/user.svg" class="section-icon">Biography</h6>
 					<p> 
-						Dr. Yi Song is currently a HongYi Postdoc (弘毅博士后) in School of Computer Science, Wuhan University, China, working with Prof. <a href="http://xiaoyuanxie.github.io" target="_blank">Xiaoyuan Xie</a>. He is also a member of <a href="http://cstar.whu.edu.cn/en/index.html" target="_blank">CSTAR</a> - Centre of Software Testing, Analysis, and Reliability. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering. Any cooperation is warmly welcomed, and more information can be found at <a href="https://github.com/yisongy" target="_blank">GitHub</a> and <a href="https://scholar.google.com/citations?hl=zh-CN&user=WHxYAi8AAAAJ" target="_blank">Google Scholar</a>.
+						Dr. Yi Song is currently a HongYi Postdoc Research Fellow (弘毅博士后) in School of Computer Science, Wuhan University, China, working with Prof. <a href="https://cs.whu.edu.cn/info/1019/2892.htm" target="_blank"> Bo Du</a> and Prof. <a href="http://xiaoyuanxie.github.io" target="_blank">Xiaoyuan Xie</a>. He is also a member of <a href="http://cstar.whu.edu.cn/en/index.html" target="_blank">CSTAR</a> - Centre of Software Testing, Analysis, and Reliability. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering. Any cooperation is warmly welcomed, and more information can be found at <a href="https://github.com/yisongy" target="_blank">GitHub</a> and <a href="https://scholar.google.com/citations?hl=zh-CN&user=WHxYAi8AAAAJ" target="_blank">Google Scholar</a>.
 					</p>
 					<p>	
 						He received his Ph.D. degree in Software Engineering from Wuhan University in 2024. He received his B.Sc. and M.Phil. degrees in Computer Science from China Three Gorges University in 2018 and 2020, respectively, and received his dual bachelor's degree from Communication University of China in 2018. He visited Advanced Research Center on Software Testing and Quality Assurance at The University of Texas at Dallas as a short-term scholar from April to June 2019.
@@ -124,7 +124,10 @@
 							<span class="award-tag">Co-chair</span> of <a href="https://qrs22.techconf.org/track/workshops/sdpa" target="_blank">SDPA 2022</a> (In conjunction with QRS 2022, Guangzhou, China)
 						</li>
 						<li>
-							<span class="award-tag">Reviewer</span> for Journal of Supercomputing
+							<span class="award-tag">PC member</span> of the Short Papers and Posters Track of <a href="https://conf.researchr.org/home/saner-2025" target="_blank">SANER 2025</a>
+						</li>
+						<li>
+							<span class="award-tag">PC member</span> of the Software Engineering Track of <a href="https://www.sigapp.org/sac/sac2025/" target="_blank">SAC 2025</a>
 						</li>
 					</ul>
 				</div>
@@ -133,6 +136,9 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.svg" class="section-icon">Awards</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2024] ACM-Wuhan & HBCS Doctoral Dissertation Award </span> (ACM-Wuhan & Computer Society of Hubei Province)
+						</li>
 						<li>
 							<span class="award-tag">[2024] Postdoctoral Fellowship Program</span> (China Postdoctoral Science Foundation)
 						</li>
