--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Dec 9, 2024</span>.</p>
+						<p>Updated on <span class="footer">Jan 2, 2025</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -122,16 +122,19 @@
 					<h6><img src="img/services.png" class="section-icon">Academic Services</h4>
 					<ul class="paper">
 						<li>
-							<span class="award-tag">Co-chair</span> of <a href="https://qrs22.techconf.org/track/workshops/sdpa" target="_blank">SDPA 2022</a> (In conjunction with QRS 2022, Guangzhou, China)
-						</li>
-						<li>
 							<span class="award-tag">PC member</span> of the Short Papers and Posters Track of <a href="https://conf.researchr.org/home/saner-2025" target="_blank">SANER 2025</a>
 						</li>
 						<li>
 							<span class="award-tag">PC member</span> of the Software Engineering Track of <a href="https://www.sigapp.org/sac/sac2025/" target="_blank">SAC 2025</a>
+						</li>
 						<li>
 							<span class="award-tag">PC member</span> of the Tool Demo Track of <a href="https://conf.researchr.org/home/icpc-2025" target="_blank">ICPC 2025</a>
 						</li>
+						<li>
+							<span class="award-tag">Session Chair</span> of Testing 3 (part of Research Papers) of <a href="https://conf.researchr.org/home/ase-2024" target="_blank">ASE 2024</a>
+						</li>
+						<li>
+							<span class="award-tag">Co-chair</span> of <a href="https://qrs22.techconf.org/track/workshops/sdpa" target="_blank">SDPA 2022</a> (In conjunction with QRS 2022, Guangzhou, China)
 						</li>
 					</ul>
 				</div>
