--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Jan 2, 2025</span>.</p>
+						<p>Updated on <span class="footer">Aug 17, 2025</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -86,6 +86,11 @@
 					<p></p>
 					<ul class="paper">
 						<li class="">
+							<u>Yi Song</u>, Dongchen Xie, Lin Xu, He Zhang, Chunying Zhou and Xiaoyuan Xie.
+							<strong><em>Not Every Patch is an Island: LLM-Enhanced Identification of Multiple Vulnerability Patches.</em></strong> 
+							2025 40th IEEE/ACM International Conference on Automated Software Engineering (ASE’25) <font color = "blue">[CCF-A]</font> <span class="badge badge-danger">New</span>
+						</li>
+						<li class="">
 							Xihao Zhang, <u>Yi Song</u> (co-first author), Xiaoyuan Xie, Qi Xin and Chenliang Xing. 
 							<strong><em>Do not neglect what's on your hands: localizing software faults with exception trigger stream.</em></strong> 
 							2024 39th IEEE/ACM International Conference on Automated Software Engineering (ASE’24) <font color = "blue">[CCF-A]</font> <a href="paper/ASE2024.pdf">[PDF]</a> <a href="https://dl.acm.org/doi/10.1145/3691620.3695479">[HTML]</a> <img src="img/trophy.png" class="section-icon"><font color="#FF0000"><em>ACM Sigsoft Distinguished Paper Award</em></font>
@@ -121,6 +126,18 @@
 				<div class="services-sect">
 					<h6><img src="img/services.png" class="section-icon">Academic Services</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">PC member</span> of the Tool and Demonstration Track of <a href="https://conf.researchr.org/track/icpc-2026/icpc-2026-tool-demonstration">ICPC2026</a>
+						</li>
+						<li>
+							<span class="award-tag">PC member</span> of the Research Track of <a href="https://conf.researchr.org/track/saner-2026/saner-2026-papers">SANER 2026</a>
+						</li>
+						<li>
+							<span class="award-tag">PC member</span> of the Technical Papers Track of <a href="https://2026.msrconf.org/track/msr-2026-technical-papers">MSR 2026</a>
+						</li>
+						<li>
+							<span class="award-tag">PC member</span> of the Technical Papers Track of <a href="https://2026.msrconf.org/track/msr-2026-technical-papers">MSR 2026</a>
+						</li>
 						<li>
 							<span class="award-tag">PC member</span> of the Short Papers and Posters Track of <a href="https://conf.researchr.org/home/saner-2025" target="_blank">SANER 2025</a>
 						</li>
