--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Aug 17, 2025</span>.</p>
+						<p>Updated on <span class="footer">Aug 28, 2025</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -136,9 +136,6 @@
 							<span class="award-tag">PC member</span> of the Technical Papers Track of <a href="https://2026.msrconf.org/track/msr-2026-technical-papers">MSR 2026</a>
 						</li>
 						<li>
-							<span class="award-tag">PC member</span> of the Technical Papers Track of <a href="https://2026.msrconf.org/track/msr-2026-technical-papers">MSR 2026</a>
-						</li>
-						<li>
 							<span class="award-tag">PC member</span> of the Short Papers and Posters Track of <a href="https://conf.researchr.org/home/saner-2025" target="_blank">SANER 2025</a>
 						</li>
 						<li>
@@ -160,6 +157,9 @@
 				<div class="grants-sect">
 					<h6><img src="img/grant.png" class="section-icon">Grants</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2025] </span>获国家自然科学基金青年基金项目资助
+						</li>
 						<li>
 							<span class="award-tag">[2024] </span>入选湖北省博士后尖端人才引进计划
 						</li>
