--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						Dr. Yi Song is currently a HongYi Postdoc Research Fellow (弘毅博士后) in School of Computer Science, Wuhan University, China, working with Prof. <a href="https://cs.whu.edu.cn/info/1019/2892.htm" target="_blank"> Bo Du</a> and Prof. <a href="http://xiaoyuanxie.github.io" target="_blank">Xiaoyuan Xie</a>. He is also a member of <a href="http://cstar.whu.edu.cn/en/index.html" target="_blank">CSTAR</a> - Centre of Software Testing, Analysis, and Reliability. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering. Any cooperation is warmly welcomed, and more information can be found at <a href="https://github.com/yisongy" target="_blank">GitHub</a> and <a href="https://scholar.google.com/citations?hl=zh-CN&user=WHxYAi8AAAAJ" target="_blank">Google Scholar</a>.
 					</p>
 					<p>	
-						He received his Ph.D. degree in Software Engineering from Wuhan University in 2024. He received his B.Sc. and M.Phil. degrees in Computer Science from China Three Gorges University in 2018 and 2020, respectively, and received his dual bachelor's degree from Communication University of China in 2018. He visited Advanced Research Center on Software Testing and Quality Assurance at The University of Texas at Dallas as a short-term scholar from April to June 2019.
+						He received his Ph.D. degree in Software Engineering from Wuhan University in 2024. He received his B.Sc. and M.Phil. degrees in Computer Science from China Three Gorges University in 2018 and 2020, respectively, and received his dual bachelor's degree from Communication University of China in 2018.
 					</p>
 				</div>
 				<!--projects-->
